# toolbox-tuner

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  build_install_from_repo.sh  build_install_local.sh  docker-compose.test.yml  docker-compose.yml  icons.toml  meson.build  meson_options.txt  org.kuchelmeister.toolbxtuner.dev.json  org.kuchelmeister.toolbxtuner.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_and_publish.yml  ci.yml  ci_tests.yml  linting.yml  pre-release.yml  release.yml
build-aux/: dist-vendor.sh  org.kuchelmeister.ToolboxTuner.Devel.json  org.kuchelmeister.ToolboxTuner.Screenshot.json  org.kuchelmeister.ToolboxTuner.json  org.kuchelmeister.ToolbxTuner.Devel.json
containers/: Containerfile  docker-compose.test.yml  docker-compose.yml
data/: meson.build  org.kuchelmeister.ToolboxTuner.desktop.in.in  org.kuchelmeister.ToolboxTuner.gschema.xml.in  org.kuchelmeister.ToolboxTuner.metainfo.xml.in.in  org.kuchelmeister.ToolbxTuner.desktop.in.in  org.kuchelmeister.ToolbxTuner.gschema.xml.in  org.kuchelmeister.ToolbxTuner.metainfo.xml.in.in  org.kuchelmeister.toolbxtuner.appdata.xml.in  org.kuchelmeister.toolbxtuner.desktop.in  org.kuchelmeister.toolbxtuner.gschema.xml
data/icons/: meson.build
data/resources/: resources.gresource.xml
po/: POTFILES  POTFILES.in  meson.build
src/: app.rs  factories.rs  main.rs  meson.build  modals.rs  setup.rs  toolbx_tuner.gresource.xml  util.rs
src/factories/: container_list.rs
src/modals/: about.rs  settings.rs  unsupported.rs
src/toolbx/: mod.rs
src/ui/: components.rs  mod.rs  ui_strings.rs
src/ui/app/: messages.rs  mod.rs  model.rs  toolbox_list.rs  update.rs  widgets.rs  workers.rs
src/ui/components/: mod.rs
src/ui/components/toolbox_apps/: factory.rs  messages.rs  mod.rs  model.rs  update.rs  widgets.rs
src/ui/components/toolbox_settings/: components.rs  messages.rs  mod.rs  model.rs  update.rs  widgets.rs  workers.rs
src/util/: prerequisit.rs  toolbox.rs  toolbx.rs
