[package]
name = "toolbox-tuner"
version = "0.0.1"
authors = ["Hannes Kuchelmeister <hannes@kuchelmeister.org>"]
edition = "2021"
publish = false

[profile.release]
lto = true

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
tracing = "0.1"
tracing-subscriber = "0.3"
relm4 = { version = "0.8.1", features = ["libadwaita", "gnome_45"] }
relm4-icons = { version = "0.8.1" }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
