[package]
name = "toolbox-tuner"
version = "0.1.0"
authors = ["Hannes Kuchelmeister <hannes@kuchelmeister.org>"]
edition = "2021"
publish = false

[profile.release]
lto = true

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
tracing = "0.1"
tracing-subscriber = "0.3"
relm4 = { version = "0.9", features = ["libadwaita", "gnome_46", "macros"] }
relm4-icons = { version = "0.9" }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
